Millores en la Gestió d'Errors de les ApiInterna i ApiExterna #62
